; ModuleID = '/home/carl/AnghaBench/i3/libi3/extr_safewrappers.c_srealloc.c'
source_filename = "/home/carl/AnghaBench/i3/libi3/extr_safewrappers.c_srealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"realloc(%zd)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @srealloc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i8* @realloc(i8* %6, i64 %7)
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = icmp ugt i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32, i32* @EXIT_FAILURE, align 4
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @err(i32 %15, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i64 %16)
  br label %18

18:                                               ; preds = %14, %11, %2
  %19 = load i8*, i8** %5, align 8
  ret i8* %19
}

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @err(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
